[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mysqlstmt"
version = "1.0.1"
description = "Python library to build SQL statements for MySQL."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Lance Lovette", email = "lance.lovette@gmail.com"}]
keywords = ["python", "sql", "mysql"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.9"

dependencies = [
]

[project.urls]
Source = "https://github.com/lovette/mysqlstmt"
Repository = "https://github.com/lovette/mysqlstmt.git"

[project.optional-dependencies]
dev = [
  "nose",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["docs*"]

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 150
target-version = "py39"

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
  "ALL",
]

ignore = [
]

[tool.ruff.lint.pydocstyle]
convention = "google"
